GNOME Bugzilla – Bug 679090
Introspection and Vala fixes
Last modified: 2012-07-10 20:30:20 UTC
Various items are missing type arguments, and the changes from 89550876 are causing some warnings from vapigen.
Created attachment 217566 [details] [review] vala: update metadata to reflect changes made by 89550876
Created attachment 217567 [details] [review] introspection: add several missing element-type annotations
Review of attachment 217567 [details] [review]: Looks good.
Review of attachment 217566 [details] [review]: Thanks looks good.
Created attachment 218467 [details] [review] introspection: add several missing element-type annotations Old version no longer applies :( I'll push right after it's reviewed this time.