introspection: add several missing element-type annotations

https://bugzilla.gnome.org/show_bug.cgi?id=679090